add handler for SMTP errors
